# Pipelining

./: CMakeLists.txt  LICENSE.txt  README.md  build.sh
misc/: TempleteConcept.cpp
src/: Branch.cpp  Branch.h  BufferedPipe.cpp  BufferedPipe.h  ByteVector.h  Operation.h  Pipe.cpp  Pipe.h  PipelineException.cpp  PipelineException.h  UnbufferedPipe.cpp  UnbufferedPipe.h  main.cpp
src/SyslogOperations/: FilterInputDevices.cpp  FilterInputDevices.h  Reformat.cpp  Reformat.h  StandardOut.cpp  StandardOut.h
test/: BranchingTest.cpp  BufferedPipeTest.cpp  CMakeLists.txt  CMakeLists.txt.gtest  FilterInputDevicesTest.cpp  ReformatTest.cpp  UnbufferedPipeTest.cpp
